<resources>
    <string name="app_name">Caculator</string>
    <string name="plus">+</string>
    <string name="Remove">-</string>
    <string name="sqr">*</string>
    <string name="split">/</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="Del">Enter</string>
    <string name="Res">Reset</string>
    <string name="Ex">Exit</string>
    <string name="result"></string>
    <string name="first">Name</string>
    <string name="second">Name</string>
</resources>
